# geobard

./: .dockerignore  .gitignore  Dockerfile  LICENSE-APACHE  LICENSE-MIT  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  docker.yml
docs/: geobard-deck.pptx  index.html
docs/talk/: README.md  geobard_talk.md  index.html
docs/talk/themes/: cartographer.css
geobard/: __init__.py  app.py  llm.py
tests/: test_app.py  test_llm.py
